--- a/product-webapp/webapp/src/app/Components/header/header.component.css
+++ b/product-webapp/webapp/src/app/Components/header/header.component.css
@@ -4,14 +4,15 @@
   justify-content: space-between;
   background-color: #020325;
   color: white;
-  padding: 1rem;
+  padding: 0 1rem;
   flex-wrap: nowrap;
   align-items: center;
+  height: 60px;
 }
 
 .logo img {
-  height: auto;
-  width: 150px;
+  height: 40px;
+  width: 40px;
 }
 
 .nav {
@@ -48,7 +49,8 @@
 .search-box {
   text-align: center;
   position: relative;
-  padding-top: 1rem; /* Adjust the top padding */
+  /* padding-top: 1rem; */
+  width:265px;
 }
 
 /* Apply styles to the search suggestion list */
