--- a/product-webapp/webapp/src/app/Components/login/login.component.css
+++ b/product-webapp/webapp/src/app/Components/login/login.component.css
@@ -5,14 +5,17 @@
   :host {
     display: flex;
     justify-content: center;
-    margin: 100px 0px;
+     margin: 30px 0px;
+
   }
 
   .mat-form-field {
     width: 100%;
     min-width: 300px;
   }
-
+::ng-deep.mat-mdc-text-field-wrapper{
+  height: 50px !important;
+}
   mat-card-title,
   mat-card-content {
     display: flex;
