--- a/product-webapp/webapp/src/app/Components/sign-up-user/sign-up-user.component.html
+++ b/product-webapp/webapp/src/app/Components/sign-up-user/sign-up-user.component.html
@@ -64,19 +64,20 @@
 
 <mat-card style="display: flex; flex-direction: row; width: 70%;  box-shadow: 5px 5px 5px #ccc;margin-bottom: 3rem;">
 
-  <mat-card-content>
-    <img src="../../../assets/signUpUser.jpg" style="width: 100%;padding: 0;">
+  <mat-card-content style="width: 130%; margin-top: auto; margin-bottom: auto;">
+    <img src="../../../assets/signUpUser.jpg" style="width: 100%;padding: 0; height: 80%;object-fit: fill;">
   </mat-card-content>
   <div style="width: 100%; padding: 2rem;">
     <mat-card-title>
       <h1>Create new User</h1>
     </mat-card-title>
     <mat-card-content>
-      <form [formGroup]="singInForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="singInForm" (ngSubmit)="onSubmit()" style="width: 100%;">
         <p>
-          <mat-form-field>
-            <input id="userName" type="text" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
-              formControlName="userName" placeholder="User Name" matInput>
+          <mat-form-field style="width: 100%;">
+            <input id="userName" type="text"
+              style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem; width: 100%;" formControlName="userName"
+              placeholder="User Name*" matInput>
             <span class="text-danger"
               *ngIf="registerFormControl.userName.touched && registerFormControl.userName.errors?.['required']">
               User Name is required
@@ -84,9 +85,9 @@
           </mat-form-field>
         </p>
         <p>
-          <mat-form-field>
+          <mat-form-field style="width: 100%;">
             <input id="first-name" type="email" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
-              formControlName="userEmail" placeholder="Email" matInput>
+              formControlName="userEmail" placeholder="Email*" matInput>
             <span class="text-danger"
               *ngIf="registerFormControl.userEmail.touched && registerFormControl.userEmail.errors?.['required']">
               Email is required
@@ -94,9 +95,9 @@
           </mat-form-field>
         </p>
         <p>
-          <mat-form-field>
+          <mat-form-field style="width: 100%;">
             <input id="padding" type="password" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
-              formControlName="userPassword" placeholder=" Password" matInput>
+              formControlName="userPassword" placeholder=" Password*" matInput>
             <span class="text-danger"
               *ngIf="registerFormControl.userPassword.touched && registerFormControl.userPassword.errors?.['required']">
               Password is required
@@ -104,9 +105,9 @@
           </mat-form-field>
         </p>
         <p>
-          <mat-form-field>
+          <mat-form-field style="width: 100%;">
             <input id="phoneNo" type="text" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
-              formControlName="userPhoneNo" placeholder="Phone No" matInput>
+              formControlName="userPhoneNo" placeholder="Phone No*" matInput>
             <span class="text-danger"
               *ngIf="registerFormControl.userPhoneNo.touched && registerFormControl.userPhoneNo.errors?.['required']">
               Phone No is required
@@ -114,9 +115,9 @@
           </mat-form-field>
         </p>
         <p>
-          <mat-form-field>
+          <mat-form-field style="width: 100%;">
             <input id="age" type="text" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
-              formControlName="userAge" placeholder="Age" matInput>
+              formControlName="userAge" placeholder="Age*" matInput>
             <span class="text-danger"
               *ngIf="registerFormControl.userAge.touched && registerFormControl.userAge.errors?.['required']">
               Age is required
@@ -124,9 +125,9 @@
           </mat-form-field>
         </p>
         <p>
-          <mat-form-field>
+          <mat-form-field style="width: 100%;">
             <input id="address" type="text" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
-              formControlName="addressList" placeholder="Address List" matInput>
+              formControlName="addressList" placeholder="Address List*" matInput>
             <span class="text-danger"
               *ngIf="registerFormControl.addressList.touched && registerFormControl.addressList.errors?.['required']">
               Address is required
@@ -136,7 +137,7 @@
 
 
         <div
-          style="display: flex;width: 70%;justify-content: space-between;padding-top: 0.3rem;padding-bottom: 0.3rem;">
+          style="display: flex;width: 100%;justify-content: space-between;padding-top: 0.3rem;padding-bottom: 0.3rem;">
           Gender:
           <div style="display: flex;  align-items: baseline;">
             <input type="radio" id="male" name="userGender" value="male" formControlName="userGender">
