--- a/product-webapp/webapp/src/app/Components/order-history/order-history.component.css
+++ b/product-webapp/webapp/src/app/Components/order-history/order-history.component.css
@@ -68,8 +68,20 @@
 textarea {
   width: 100%;
   margin-top: 10px;
+  background-color: #F6F4EB;
+  padding: 5%;
 }
 
 button {
   margin-top: 10px;
+  border-radius: 1%;
+}
+mat-card{
+  background-color: #4682A9;
+  padding-inline: 5%;
+  margin-left: 3%;
+  color: #ffffff;
+}
+h3{
+  text-align: center;
 }
