--- a/product-webapp/webapp/src/app/Components/login/login.component.html
+++ b/product-webapp/webapp/src/app/Components/login/login.component.html
@@ -56,11 +56,11 @@
         <div style="display: flex; justify-content: space-between; margin-top: 2rem;">
           <div style="display: flex; justify-content: baseline;">
 
-            <a routerLink="/signUpUser">Create User</a>
+            <a routerLink="/signUpUser">First Time Here?</a>
           </div>
 
           <div>
-            <a routerLink="/signUpSeller">Create Seller</a>
+            <a routerLink="/signUpSeller">Want To Sell Items Here?</a>
           </div>
 
         </div>
