--- a/product-webapp/webapp/src/app/Components/sign-up-seller/sign-up-seller.component.html
+++ b/product-webapp/webapp/src/app/Components/sign-up-seller/sign-up-seller.component.html
@@ -71,7 +71,7 @@
   </mat-card-content>
   <div style="width: 100%; padding: 2rem;">
     <mat-card-title>
-      <h1>Create new Seller</h1>
+      <h1>Become a Seller</h1>
 
     </mat-card-title>
     <mat-card-content>
@@ -146,6 +146,8 @@
         <div class="button">
           <button type="submit" class="btn1">SignUp</button>
         </div>
+        <br>
+        <a routerLink="/login" class="router-link">We Never Forget Our Sellers :)</a>
         <!--
               <p *ngIf="error" class="error">
                 {{ error }}
