--- a/product-webapp/webapp/src/app/Components/sign-up-user/sign-up-user.component.html
+++ b/product-webapp/webapp/src/app/Components/sign-up-user/sign-up-user.component.html
@@ -69,7 +69,7 @@
   </mat-card-content>
   <div style="width: 100%; padding: 2rem;">
     <mat-card-title>
-      <h1>Create new User</h1>
+      <h1>Become a User</h1>
     </mat-card-title>
     <mat-card-content>
       <form [formGroup]="singInForm" (ngSubmit)="onSubmit()" style="width: 100%;">
@@ -154,6 +154,9 @@
         <div class="button">
           <button type="submit" class="btn1">SignUp</button>
         </div>
+        <br>
+        <a routerLink="/login" class="router-link">What! Come Again... Already have an Account?</a>
+
         <!--
               <p *ngIf="error" class="error">
                 {{ error }}
