--- a/product-webapp/webapp/src/app/Components/login/login.component.css
+++ b/product-webapp/webapp/src/app/Components/login/login.component.css
@@ -13,9 +13,9 @@
     width: 100%;
     min-width: 300px;
   }
-::ng-deep.mat-mdc-text-field-wrapper{
+/* ::ng-deep.mat-mdc-text-field-wrapper{
   height: 50px !important;
-}
+} */
   mat-card-title,
   mat-card-content {
     display: flex;
